2009-03-18  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* data/Makefile.am:
	* data/logview-toolbar.xml:
	* logview-prefs.c: (do_finalize), (load_filters),
	(save_filter_foreach_func), (save_filters), (get_filters_foreach),
	(logview_prefs_init), (logview_prefs_get_filters),
	(logview_prefs_remove_filter), (logview_prefs_add_filter),
	(logview_prefs_get_filter):
	* logview-prefs.h:
	* logview-window.c: (if): implement regex based filtering of log
	files. Patch by Johannes Schmid (#574362).

2009-03-02  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-app.c: (parse_syslog), (enumerate_job_finish),
	(enumerate_next_files_async_cb), (enumerate_children_async_cb),
	(logview_app_first_time_initialize), (logview_app_initialize):
	* logview-prefs.c: (logview_prefs_init): when starting the
	application for the first time, gather all the readable files from
	/var/log instead of hardcoding logfile names.
	We'll eventually, and hopefully, support a smarter parsing of
	/etc/logrotate.* and log rotated/compressed log grouping, but right
	now this is the best effort we can do (#567169).

2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: add gthread CFLAGS and LIBS (#572985).

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* gtkmessagearea.c: add an include to fix warnings
	* logview-log.c: (read_gzip_header):
	* logview-manager.c: (logview_manager_get_if_loaded): return something.
	Part of bug #570422.

2009-01-30  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-loglist.c: (tree_selection_changed_cb),
	(manager_active_changed_cb): make sure we check for day != NULL
	before emitting "day-selected". Hopefully fixes bug #569807.

2009-01-30  Cosimo Cecchi  <cosimoc@gnome.org>

        * logview-log.c:
        (logview_log_init):
        (log_load):
        (logview_log_get_has_days):
        * logview-log.h:
        * logview-loglist.c:
        (update_days_and_lines_for_log):
        (manager_log_added_cb):
        * logview-window.c: