@@ -1,5 +1,10 @@
 2009-03-18  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* logview-prefs.c: (save_filter_foreach_func):
+	* logview-window.c: fix some leaks.
+
+2009-03-18  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* Makefile.am:
 	* data/Makefile.am:
 	* data/logview-toolbar.xml:
